--- a/字节/1.一面/index.html
+++ b/字节/1.一面/index.html
@@ -6,9 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
 
 <body>
-  <script src="./index.js"></script>
+  <!-- <script src="./index.js"></script> -->
+  <script>
+    const domList = document.getElementsByTagName('div');
+    console.log('domList', domList);
+
+  </script>
 </body>
 
 </html>
